--- a/portfolio.html
+++ b/portfolio.html
@@ -26,45 +26,16 @@
             </div>
             <div class="background">
                 <div class="image">
+                    <a href="https://chrisoffiong.github.io/Word-Guess-Game/">
                     <img src="assests/images/1.jpg" alt="Image 1">
                     <div class="item">
                         <h3>
-                            Project 
+                            Hangman Game!
                         </h3>
+                   
                     </div>
                 </div>
-                <div class="image">
-                    <img src="assests/images/2.jpg" alt="image 2">
-                    <div class="item">
-                        <h3>
-                            Game
-                        </h3>
-                    </div>
-                </div>
-                <div class="image">
-                    <img src="assests/images/3.jpg" alt="image 3">
-                    <div class="item">
-                        <h3>
-                            New Script
-                        </h3>
-                    </div>
-                </div>
-                <div class="image">
-                    <img src="assests/images/4.jpg" alt="image 4">
-                    <div class="item">
-                        <h3>
-                            Java Game
-                        </h3>
-                    </div>
-                </div>
-                <div class="image">
-                    <img src="assests/images/5.jpg" alt="image 5">
-                    <div class="item">
-                        <h3>
-                            Basketball Game
-                        </h3>
-                    </div>
-                </div>
+             </a>
             </div>
         </div>
     </body>
