--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>
         Portfolio
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Ranga|Righteous" rel="stylesheet">
-    <link rel ="stylesheet" type="text/css" href="assests/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assests/css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
         <div class=Portfolio>
-            <h1> 
+            <h1>
                 Christopher Offiong
             </h1>
             <div class="links">
@@ -27,19 +29,31 @@
             <div class="background">
                 <div class="image">
                     <a href="https://chrisoffiong.github.io/Word-Guess-Game/">
-                    <img src="assests/images/1.jpg" alt="Image 1">
-                    <div class="item">
-                        <h3>
-                            Hangman Game!
-                        </h3>
-                   
-                    </div>
+                        <img src="assests/images/1.jpg" alt="Image 1" width="300" height="300">
+                        <div class="item">
+                            <h3>
+                                Hangman Game!
+                            </h3>
+
+                        </div>
+                    </a>
                 </div>
-             </a>
+                <div class="image">
+                    <a href="https://chrisoffiong.github.io/unit-4-game/">
+                        <img src="assests/images/2.jpg" width="300" height="300">
+                        <div class="item">
+                            <h3>
+                                Crystale Game!
+                            </h3>
+                        </div>
+                    </a>
+                </div>
+
             </div>
         </div>
-    </body>
-    <footer class="footer">
-        Copyright©
-    </footer>
-    </html>
+</body>
+<footer class="footer">
+    Copyright©
+</footer>
+
+</html>
