--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
                         <img src="assests/images/2.jpg" width="300" height="300">
                         <div class="item">
                             <h3>
-                                Crystale Game!
+                                Crystal Game!
                             </h3>
                         </div>
                     </a>
