--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,16 @@
                         </div>
                     </a>
                 </div>
-
+                <div class="image">
+                    <a href="https://chrisoffiong.github.io/TriviaGame/">
+                        <img src="assests/images/3.jpg" width="300" height="300">
+                        <div class="item">
+                            <h3>
+                                Trivia!!
+                            </h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 </body>
