--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,16 @@
                         </div>
                     </a>
                 </div>
+                <div class="image">
+                    <a href="https://chrisoffiong.github.io/Giphy/">
+                        <img src="assests/images/gif.gif" width="300" height="300">
+                        <div class="item">
+                            <h3>
+                                Giphy Project
+                            </h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 </body>
