--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,16 @@
                         </div>
                     </a>
                 </div>
+                <div class="image">
+                    <a href="https://chrisoffiong.github.io/Train-Time/">
+                        <img src="assests/images/4.jpg" width="300" height="300">
+                        <div class="item">
+                            <h3>
+                                Train Time
+                            </h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 </body>
